--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -1,7 +1,11 @@
 # V2 Notes
 
-- Environment
+- Environment (web)
     - Laravel 9
     - Php 8.1 (Current Stable)
     - Postgres 14 Setup
     - Migrations: Make single
+- Frontend Codenames
+    - alf (original front-end)
+    - bet (react front-end sbadmin)
+    - cha (react front-end custom)
