v2 | configure postgres extensions

--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -1,9 +1,9 @@
 # V2 Notes
 
 - Environment (web)
-    - Laravel 9
-    - Php 8.1 (Current Stable)
-    - Postgres 14 Setup
+    - ✅ Laravel 9
+    - ✅ Php 8.1.8 (Current Stable)
+    - ✅ Postgres 14 Setup
     - Migrations: Make single
 - Frontend Codenames
     - alf (original front-end)
