v2 | postgres support & fresh migrations

--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -4,7 +4,8 @@
     - ✅ Laravel 9
     - ✅ Php 8.1.8 (Current Stable)
     - ✅ Postgres 14 Setup
-    - Migrations: Make single
+    - ✅ Migrations: Make single
+    - Squash migrations
 - Frontend Codenames
     - alf (original front-end)
     - bet (react front-end sbadmin)
