--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -1,12 +1,20 @@
 # V2 Notes
 
-- Environment (web)
+- 2022-07-W4: Environment (web)
     - ✅ Laravel 9
     - ✅ Php 8.1.8 (Current Stable)
     - ✅ Postgres 14 Setup
     - ✅ Migrations: Make single
     - Squash migrations
-- Frontend Codenames
-    - alf (original front-end)
-    - bet (react front-end sbadmin)
-    - cha (react front-end custom)
+- 2022-08-W1
+    - ✅ TD Inertia: : Initialize Layout file
+    - ✅ TD Inertia: : Feather Icons support via React
+    - 🚧 TD Inertia: : Layout File Links
+    - 🚧 TD Inertia: : Change Password
+    - 🚧 TD Inertia: : My Profile
+    - 🚧 TD Inertia: : My Portfolio Page
+    - 🚧 TD Inertia: : Users
+    - 🚧 TD Inertia  : Blogs
+    - 🚧 TD Inertia: : Projects
+    - 🚧 TD Inertia: : Announcements
+    - 🚧 TD Inertia  : Dashboard 
