--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -9,11 +9,13 @@
 - 2022-08-W1
     - ✅ TD Inertia: : Initialize Layout file
     - ✅ TD Inertia: : Feather Icons support via React
+    - ✅ TD Inertia: : Users Index
+    - ✅ TD Inertia: : Users Create
+    - ✅ TD Inertia: : Users Update
     - 🚧 TD Inertia: : Layout File Links
     - 🚧 TD Inertia: : Change Password
     - 🚧 TD Inertia: : My Profile
     - 🚧 TD Inertia: : My Portfolio Page
-    - 🚧 TD Inertia: : Users
     - 🚧 TD Inertia  : Blogs
     - 🚧 TD Inertia: : Projects
     - 🚧 TD Inertia: : Announcements
