v2 | users refactor & make components, blogs start

--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -12,11 +12,14 @@
     - ✅ TD Inertia: : Users Index
     - ✅ TD Inertia: : Users Create
     - ✅ TD Inertia: : Users Update
+    - ✅ Core        : Add MailHog
     - 🚧 TD Inertia: : Layout File Links
     - 🚧 TD Inertia: : Change Password
     - 🚧 TD Inertia: : My Profile
     - 🚧 TD Inertia: : My Portfolio Page
-    - 🚧 TD Inertia  : Blogs
+    - 🚧 TD Inertia  : Blogs All
+    - 🚧 TD Inertia  : Blogs Upsert
+    - 🚧 TD Inertia  : Blogs Public
     - 🚧 TD Inertia: : Projects
     - 🚧 TD Inertia: : Announcements
     - 🚧 TD Inertia  : Dashboard 
