v2 | blog, change password

--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -14,11 +14,12 @@
     - ✅ TD Inertia: : Users Update
     - ✅ Core        : Add MailHog
     - 🚧 TD Inertia: : Layout File Links
-    - 🚧 TD Inertia: : Change Password
+    - ✅ TD Inertia: : Change Password
     - 🚧 TD Inertia: : My Profile
     - 🚧 TD Inertia: : My Portfolio Page
-    - 🚧 TD Inertia  : Blogs All
-    - 🚧 TD Inertia  : Blogs Upsert
+    - ✅ TD Inertia  : Blogs All
+    - ✅ TD Inertia  : Blogs Upsert
+    - ✅ TD Inertia  : Blogs Markdown component
     - 🚧 TD Inertia  : Blogs Public
     - 🚧 TD Inertia: : Projects
     - 🚧 TD Inertia: : Announcements
