--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -14,8 +14,8 @@
     - ✅ TD Inertia: : Users Update
     - ✅ Core        : Add MailHog
     - 🚧 TD Inertia: : Layout File Links
-    - ✅ TD Inertia: : Change Password
-    - 🚧 TD Inertia: : My Profile
+    - ✅ TD Inertia: : Change Password (users)
+    - 🚧 TD Inertia: : My Profile (users)
     - 🚧 TD Inertia: : My Portfolio Page
     - ✅ TD Inertia  : Blogs All
     - ✅ TD Inertia  : Blogs Upsert
@@ -24,3 +24,6 @@
     - 🚧 TD Inertia: : Projects
     - 🚧 TD Inertia: : Announcements
     - 🚧 TD Inertia  : Dashboard 
+    - 🚧 TD Inertia  : Photos 
+    - 🚧 TD Inertia  : Photo Albums
+    - 🚧 Site        : CloudCraft 
