v2 | portfolio details & experiences

--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -17,6 +17,7 @@
     - ✅ TD Inertia: : Change Password (users)
     - 🚧 TD Inertia: : My Profile (users)
     - 🚧 TD Inertia: : My Portfolio Page
+      - Details;✅ Experiences;Degrees;Skills;Certifications
     - ✅ TD Inertia  : Blogs All
     - ✅ TD Inertia  : Blogs Upsert
     - ✅ TD Inertia  : Blogs Markdown component
@@ -27,3 +28,4 @@
     - 🚧 TD Inertia  : Photos 
     - 🚧 TD Inertia  : Photo Albums
     - 🚧 Site        : CloudCraft 
+    - 🚧 Site creator command and flags (w/ default options)
