--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -16,16 +16,20 @@
     - 🚧 TD Inertia: : Layout File Links
     - ✅ TD Inertia: : Change Password (users)
     - 🚧 TD Inertia: : My Profile (users)
-    - 🚧 TD Inertia: : My Portfolio Page
-      - Details;✅ Experiences;Degrees;Skills;Certifications
+    - ✅ TD Inertia: : My Portfolio Page
+        - ✅ Details
+        - ✅ Experiences
+        - ✅ Degrees
+        - ✅ Skills
+        - ✅ Certifications
     - ✅ TD Inertia  : Blogs All
     - ✅ TD Inertia  : Blogs Upsert
     - ✅ TD Inertia  : Blogs Markdown component
     - 🚧 TD Inertia  : Blogs Public
     - 🚧 TD Inertia: : Projects
     - 🚧 TD Inertia: : Announcements
-    - 🚧 TD Inertia  : Dashboard 
-    - 🚧 TD Inertia  : Photos 
+    - 🚧 TD Inertia  : Dashboard
+    - 🚧 TD Inertia  : Photos
     - 🚧 TD Inertia  : Photo Albums
-    - 🚧 Site        : CloudCraft 
+    - 🚧 Site        : CloudCraft
     - 🚧 Site creator command and flags (w/ default options)
