--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -6,7 +6,7 @@
     - ✅ Postgres 14 Setup
     - ✅ Migrations: Make single
     - Squash migrations
-- 2022-08-W1
+- 2022-08-W1-W2
     - ✅ TD Inertia: : Initialize Layout file
     - ✅ TD Inertia: : Feather Icons support via React
     - ✅ TD Inertia: : Users Index
@@ -22,6 +22,10 @@
         - ✅ Degrees
         - ✅ Skills
         - ✅ Certifications
+    - ✅ TD Inertia: :  Rich Text Editor Component
+    - ✅ TD Inertia: :  Portfolio Public 
+      - ✅ Console
+      - ✅ Basic
     - ✅ TD Inertia  : Blogs All
     - ✅ TD Inertia  : Blogs Upsert
     - ✅ TD Inertia  : Blogs Markdown component
