v2 | announcements, email logs

--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -27,7 +27,7 @@
       - ✅ Console
       - ✅ Basic
     - ✅ TD Inertia  : Blogs All
-    - ✅ TD Inertia  : Blogs Upsert
+    - ✅ TD Inertia  : Blogs Create
     - ✅ TD Inertia  : Blogs Markdown component
     - 🚧 TD Inertia  : Blogs Public
     - 🚧 TD Inertia: : Projects
