--- a/docs/old/2021-07-12-SJP.md
+++ b/docs/old/2021-07-12-SJP.md
@@ -8,7 +8,7 @@
     - Recently Created Alumni
 - Alumni
     - List
-        - Upsert:  Register / Edit
+        - Create:  Register / Edit
             - Lay / Ordained
         - Details
             - Basic Details
