v2 | only install client
speed up build

--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -5,7 +5,7 @@
     - ✅ Php 8.1.8 (Current Stable)
     - ✅ Postgres 14 Setup
     - ✅ Migrations: Make single
-    - Squash migrations
+    - ~~Squash migrations~~
 - 2022-08-W1-W2
     - ✅ TD Inertia: : Initialize Layout file
     - ✅ TD Inertia: : Feather Icons support via React
