--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -13,9 +13,9 @@
     - ✅ TD Inertia: : Users Create
     - ✅ TD Inertia: : Users Update
     - ✅ Core        : Add MailHog
-    - 🚧 TD Inertia: : Layout File Links
+    - ✅ TD Inertia: : Layout File Links
     - ✅ TD Inertia: : Change Password (users)
-    - 🚧 TD Inertia: : My Profile (users)
+    - ✅ TD Inertia: : My Profile (users)
     - ✅ TD Inertia: : My Portfolio Page
         - ✅ Details
         - ✅ Experiences
@@ -23,17 +23,23 @@
         - ✅ Skills
         - ✅ Certifications
     - ✅ TD Inertia: :  Rich Text Editor Component
-    - ✅ TD Inertia: :  Portfolio Public 
-      - ✅ Console
-      - ✅ Basic
+    - ✅ TD Inertia: :  Portfolio Public
+        - ✅ Console
+        - ✅ Basic
     - ✅ TD Inertia  : Blogs All
     - ✅ TD Inertia  : Blogs Create
     - ✅ TD Inertia  : Blogs Markdown component
-    - 🚧 TD Inertia  : Blogs Public
-    - 🚧 TD Inertia: : Projects
-    - 🚧 TD Inertia: : Announcements
-    - 🚧 TD Inertia  : Dashboard
-    - 🚧 TD Inertia  : Photos
-    - 🚧 TD Inertia  : Photo Albums
-    - 🚧 Site        : CloudCraft
-    - 🚧 Site creator command and flags (w/ default options)
+    - ✅ TD Inertia  : Blogs Public
+    - ✅ TD Inertia: : Projects
+    - ✅ TD Inertia: : Announcements
+    - ✅ TD Inertia  : Photos
+    - ✅ TD Inertia  : Photo Albums
+    - Username references to `external_id`
+    - 🚧 Migration Squashing
+    - 🚧 Modules Cleanup
+    - 🚧 Refactoring
+    - 🚧 Route list test
+    - 🚧 Stale Routes
+    - 🚧 Update stale dependencies (composer/package.json)
+    - 🚧 Test Build
+    - 🚧 Backup master as v1 
