--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -5,7 +5,9 @@
     - ✅ Php 8.1.8 (Current Stable)
     - ✅ Postgres 14 Setup
     - ✅ Migrations: Make single
-    - ~~Squash migrations~~
+    - ~~Squash migrations~~ (Laravel 8 `php artisan schema:dump`) 
+        - migrations will fail on different database engine when squashed
+        - e.g. production: pgsql; testing db (runtime): sqlite <-- fails
 - 2022-08-W1-W2
     - ✅ TD Inertia: : Initialize Layout file
     - ✅ TD Inertia: : Feather Icons support via React
@@ -34,12 +36,18 @@
     - ✅ TD Inertia: : Announcements
     - ✅ TD Inertia  : Photos
     - ✅ TD Inertia  : Photo Albums
-    - Username references to `external_id`
-    - 🚧 Migration Squashing
+    - ✅ Username references to `external_id`
+    - ✅ Migration Cleanups
     - 🚧 Modules Cleanup
     - 🚧 Refactoring
     - 🚧 Route list test
     - 🚧 Stale Routes
-    - 🚧 Update stale dependencies (composer/package.json)
-    - 🚧 Test Build
-    - 🚧 Backup master as v1 
+    - ✅ Update stale dependencies (composer/package.json)
+    - ✅ Test Build
+    - ✅ Backup `master` as `v1`
+    - 🚧 Phpunit should work
+    - 🚧 Update README.md
+    - 🚧 Merge `v2` to `master`
+    - 🚧 trenchdevs.org to v2 (`master`)
+    - 🚧 Delete Stale branches
+    - 🚧 Forky
