--- a/docs/devnotes/002_2022-07-27-v2.md
+++ b/docs/devnotes/002_2022-07-27-v2.md
@@ -4,8 +4,7 @@
     - ✅ Laravel 9
     - ✅ Php 8.1.8 (Current Stable)
     - ✅ Postgres 14 Setup
-    - ✅ Migrations: Make single
-    - ~~Squash migrations~~ (Laravel 8 `php artisan schema:dump`) 
+    - ~~Squash migrations~~ (Laravel 8 `php artisan schema:dump`)
         - migrations will fail on different database engine when squashed
         - e.g. production: pgsql; testing db (runtime): sqlite <-- fails
 - 2022-08-W1-W2
@@ -38,17 +37,17 @@
     - ✅ TD Inertia  : Photo Albums
     - ✅ Username references to `external_id`
     - ✅ Migration Cleanups
-    - 🚧 Modules Cleanup
-    - 🚧 Refactoring
-    - 🚧 Route list test
-    - 🚧 Stale Routes
+    - ✅ Modules Cleanup
+    - ✅ Refactoring
+    - ✅ Route list test
+    - ✅ Stale Routes
     - ✅ Update stale dependencies (composer/package.json)
     - ✅ Test Build
     - ✅ Backup `master` as `v1`
-    - 🚧 Phpunit should work
-    - 🚧
-    - 🚧 Update README.md
-    - 🚧 Merge `v2` to `master`
+    - ✅ Phpunit should work
+    - ✅ Update README.md
+    - ✅ Merge `v2` to `master`
+    - ✅ Delete Stale branches
+    - ✅ Fork Setup
+- 2022-09-W4
     - 🚧 trenchdevs.org to v2 (`master`)
-    - 🚧 Delete Stale branches
-    - 🚧 Forky
